# CITY3116-1

./: .gitignore  CLAUDE.md  README.md  documentation.md  modelC.txt  setup.sh
OSWAP-levels/: owasp-2025-index.html  owasp-a01-broken-access-control.html  owasp-a02-security-misconfiguration.html  owasp-a03-supply-chain.html  owasp-a04-cryptographic-failures.html  owasp-a05-injection.html  owasp-a06-insecure-design.html  owasp-a07-authentication-failures.html  owasp-a08-integrity-failures.html  owasp-a09-logging-failures.html  owasp-a10-exception-handling.html  smart-building-sqli.html
cps-ids/: Cargo.toml
cps-ids/cnn-lstm-train/: Cargo.toml  setup.sh
cps-ids/cnn-lstm-train/src/: main.rs
cps-ids/cnn-lstm-train/src/engine/: model.rs  train.rs  trainer.rs
cps-ids/cnn-lstm-train/src/preprocess/: cicids.rs  mod.rs  normalize.rs
cps-ids/crates/ids-collector/: Cargo.toml
cps-ids/crates/ids-collector/src/host/: log_watcher.rs  mod.rs  syscall_monitor.rs
cps-ids/crates/ids-collector/src/network/: replay.rs
cps-ids/crates/ids-collector/src/network/protocols/: dnp3.rs  modbus.rs
cps-ids/crates/ids-common/: Cargo.toml
cps-ids/crates/ids-common/src/: config.rs  error.rs
cps-ids/crates/ids-dashboard/: Cargo.toml
cps-ids/crates/ids-dashboard/src/: main.rs  routes.rs  ws.rs
cps-ids/crates/ids-engine/: Cargo.toml
cps-ids/crates/ids-engine/src/: ensemble.rs  isolation_forest.rs  lib.rs  train.rs
cps-ids/crates/ids-preprocess/: Cargo.toml
cps-ids/crates/ids-preprocess/src/: cicids.rs  dataset.rs  encode.rs  features.rs  lib.rs  smote.rs  unsw.rs
cps-ids/crates/ids-response/src/: alerter.rs  lib.rs  logger.rs  siem.rs
cps-ids/parallel-train/: Cargo.toml  setup.sh
cps-ids/parallel-train/src/: main.rs
cps-ids/parallel-train/src/engine/: isolation_forest.rs  random_forest.rs  train.rs
cps-ids/parallel-train/src/preprocess/: combined.rs  dataset.rs  encode.rs  mod.rs  smote.rs  unsw.rs
cps-ids/pytorch-train/: data_loaders.py  evaluate.py  model.py  nvidia-pc-commands.txt  setup.sh  train_all.sh
cps-ids/scripts/: download_dataset.sh
evidence/logs/: attack-manifest.json
evidence/run-20260323-180705/logs/: attack-manifest.json
evidence/run-20260323-191421/logs/: attack-manifest.json
evidence/run-20260323-192508/logs/: attack-manifest.json
evidence/run-20260324-212752/logs/: attack-manifest.json
ids/: config.toml
ids/cnn-lstm-train/: Cargo.toml  setup.sh
ids/cnn-lstm-train/src/: main.rs
ids/cnn-lstm-train/src/engine/: mod.rs  train.rs
ids/crates/ids-collector/src/host/: file_integrity.rs  process_monitor.rs
ids/crates/ids-collector/src/network/: capture.rs  flow.rs  mod.rs
ids/crates/ids-collector/src/network/protocols/: mod.rs  opcua.rs
ids/crates/ids-common/src/: types.rs
ids/crates/ids-dashboard/src/static/: index.html
ids/crates/ids-engine/: Cargo.toml
ids/crates/ids-engine/src/: evaluate.rs  inference_server.py  lib.rs  ml_inference.rs  random_forest.rs  rules.rs
ids/crates/ids-preprocess/: Cargo.toml
ids/crates/ids-preprocess/src/: combined.rs  dataset.rs  features.rs  lib.rs  normalize.rs  smote.rs
ids/crates/ids-response/: Cargo.toml
ids/crates/ids-response/src/: blocker.rs
ids/parallel-train/: Cargo.toml  setup.sh
ids/parallel-train/src/: main.rs
ids/parallel-train/src/engine/: ensemble.rs  evaluate.rs  mod.rs  train.rs
ids/pytorch-train/: export_onnx.py  nvidia-pc-commands.txt  preprocessing.py  setup.sh  train.py
ids/pytorch-train/data/models/model-a/: cnn_lstm_model.onnx  cnn_lstm_model.onnx.data  cnn_lstm_model.pt  evaluation_report.json  scaler.json
ids/pytorch-train/data/models/model-b/: cnn_lstm_model.onnx  cnn_lstm_model.onnx.data  cnn_lstm_model.pt  evaluation_report.json  scaler.json
ids/pytorch-train/data/models/model-c/: cnn_lstm_model.onnx  cnn_lstm_model.onnx.data  cnn_lstm_model.pt  evaluation_report.json  scaler.json
ids/pytorch-train/data/models/model-d/: cnn_lstm_model.onnx  cnn_lstm_model.onnx.data  cnn_lstm_model.pt  evaluation_report.json  scaler.json
investigation/: attack-runner.py  expected-results.md  run-1-results.md  run.sh
plant/: ATTACK-EVIDENCE-GUIDE.md  arduino-modbus.md  arduino-plc-firmware.cpp  arduino-uno-sensor-node.cpp  attack-framework.md  attack-framework.py  attack-timeline.md  attack.py  cps.md  firmware-docs.md  lab.md  wiring-layout.md
plant/dashboard/: app.py  index.html
plant/simulation/: init.py  physical_process.py  plc1.py  plc2.py  requirements.txt  run.py  topo.py  utils.py
plant/stux/: rootkit-proxy.py  stuxnet-layout.md  stuxnet.md
presentation/: CPS-IDS-Presentation.pptx  build_pptx.py  slides.html
resources/: dual-dataset-plan.md  gpu-training.md  parallel-cpu-training.md  plan.md  report.md  tripple-model-plan.md
resources/images/: architecture.dot  ids-architecture.dot  model-cnn-lstm.dot  model-isolation-forest.dot  model-random-forest.dot  tech-stack.dot  training-pipeline.dot
resources/training-logs/: modelD.txt
website/: README.md  init-db.js  package.json  server.js
website/public/: admin.html  banking.html  index.html  login.html  products.html  register.html  reset-password.html  tools.html
website/public/css/: style.css
website/public/js/: app.js
writeup/: assignment.txt  writeup_v2.docx  writeup_v2.html  writeup_v2.md  writeup_v2.odt  writeup_v3.md  writeup_v4.md  writeup_v5.md
