[workspace]
resolver = "2"
members = [
    "crates/ids-common",
    "crates/ids-collector",
    "crates/ids-preprocess",
    "crates/ids-engine",
    "crates/ids-response",
    "crates/ids-dashboard",
]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
thiserror = "2"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
ndarray = { version = "0.16", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
rand = "0.8"
