[package]
name = "cnn-lstm-train"
version = "0.1.0"
edition = "2021"

[workspace]

[[bin]]
name = "train-cnn-lstm"
path = "src/main.rs"

[dependencies]
# Neural network (PyTorch bindings)
tch = "0.17"

# Data processing
ids-preprocess = { path = "../crates/ids-preprocess" }
rayon = "1.10"
rand = "0.8"
rand_chacha = "0.3"
ndarray = { version = "0.16", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI and logging
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"

[profile.release]
opt-level = 3
lto = "thin"
