[package]
name = "ids-dashboard"
version = "0.1.0"
edition = "2021"

[dependencies]
ids-common = { path = "../ids-common" }
ids-collector = { path = "../ids-collector" }
ids-preprocess = { path = "../ids-preprocess" }
ids-engine = { path = "../ids-engine" }
ids-response = { path = "../ids-response" }
axum = { version = "0.7", features = ["ws"] }
tokio = { workspace = true }
tower-http = { version = "0.5", features = ["fs", "cors"] }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
