[package]
name = "ids-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
ids-common = { path = "../ids-common" }
ids-preprocess = { path = "../ids-preprocess" }
smartcore = "0.3"
ndarray = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
clap = { version = "4", features = ["derive"] }
tracing-subscriber = { workspace = true }

[[bin]]
name = "train_models"
path = "src/bin/train_models.rs"
