[package]
name = "ids-preprocess"
version = "0.1.0"
edition = "2021"

[dependencies]
ids-common = { path = "../ids-common" }
csv = "1.3"
ndarray = { workspace = true }
ndarray-rand = "0.15"
serde = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
