[package]
name = "ids-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
ids-common = { path = "../ids-common" }
ids-preprocess = { path = "../ids-preprocess" }
ids-collector = { path = "../ids-collector" }
ids-response = { path = "../ids-response" }
smartcore = "0.3"
ndarray = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
clap = { version = "4", features = ["derive"] }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

[[bin]]
name = "train_models"
path = "src/bin/train_models.rs"

[[bin]]
name = "monitor"
path = "src/bin/monitor.rs"
